Add new release and made some changes to the UI
